fixed overflow-x issue and slightly modified batch upload UI

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -285,7 +285,6 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #fff;
     padding: 10px 20px;
     border-radius: 8px;
-    overflow-x: scroll;
 }
 
 .main-padded {
